Fix the bug with the white space(first solution)

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-body {
+body,
+html {
   margin: 0;
+  padding: 0;
   font-size: 1.2rem;
   font-family: 'Montserrat', sans-serif;
   overflow-x: hidden;
@@ -31,10 +33,10 @@ p {
 /*** Header ***/
 .header {
   position: fixed;
+  width: 100%;
   z-index: 1;
   padding: 1.2rem 2rem;
   top: 0;
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
